# AdventOfCode2025

./: CMakeLists.txt
1/: main.cpp
10/: main.cpp
11/: main.cpp
12/: data.txt  main.cpp
2/: main.cpp
3/: main.cpp
4/: main.cpp
5/: main.cpp
6/: main.cpp
7/: main.cpp
8/: main.cpp
9/: main.cpp
